src/trusted/validator_arm/testdata/bad/invalid_math_to_sp.val
Errors found. Exiting with exit code: 2
